src/objects/Placement__c.object
<CustomObject>
    <fields>
        <fullName>ServiceRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Request</label>
        <referenceTo>ServiceRequest__c</referenceTo>
        <relationshipLabel>Placements</relationshipLabel>
        <relationshipName>Placements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State_Statute_Expired_Date__c</fullName>
        <formula>Move_Out_Date__c + Days_State_Statute__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Statute Expired</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Checked-In</fullName>
                </value>
                <value>
                    <fullName>Checked-Out</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Moved-In</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Moved-Out</fullName>
                </value>
                <value>
                    <fullName>Pending Confirmation</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Searching</fullName>
                </value>
                <value>
                    <fullName>Pending Check-In</fullName>
                </value>
                <value>
                    <fullName>Lost Opportunity</fullName>
                </value>
                <value>
                    <fullName>Viewing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>THA_Signed_Date__c</fullName>
        <label>THA Signed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>THC_Signed_Date__c</fullName>
        <label>THC Signed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Temp_Property_Address__c</fullName>
        <formula>Properties_Lookup__r.Address_Line_1__c &amp; &quot; &quot; &amp; Properties_Lookup__r.Address_Line_2__c   &amp; &quot;, &quot; &amp; Properties_Lookup__r.City__c &amp; &quot;, &quot; &amp;  Properties_Lookup__r.State_ID__c  &amp;  &quot; &quot; &amp; Properties_Lookup__r.Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Temp Property Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Credit_Needed__c</fullName>
        <label>Total Credit Needed</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Deposits__c</fullName>
        <formula>Selected_Search__r.Total_Deposits__c +  Approved_Quote__r.Furniture_Deposits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Deposits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fees__c</fullName>
        <formula>Selected_Search__r.Total_Fees__c +  Approved_Quote__r.Furniture_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Landlord_Costs__c</fullName>
        <formula>Selected_Search__r.Total_Landlord_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Landlord Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Unbilled__c</fullName>
        <description>Total unbilled amount for hotel placements</description>
        <label>Total Unbilled</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Using_Backup_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Using Backup Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X18_Char_ID_Hotel__c</fullName>
        <description>Created to convert the 15 character id to 18 characters.</description>
        <label>X18_Char_ID_Hotel</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Placement</label>
    <listViews>
        <fullName>All_Hotel_Placements</fullName>
        <columns>NAME</columns>
        <columns>Actual_Check_In_Date__c</columns>
        <columns>Opportunity__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Status__c</columns>
        <columns>Credit_Card_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Placement__c.Hotel_Placement</value>
        </filters>
        <label>All Hotel Placements</label>
    </listViews>
    <listViews>
        <fullName>All_Placements</fullName>
        <columns>Claim_Number__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Status__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Placements</label>
    </listViews>
    <listViews>
        <fullName>Hotel_Placements</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Temp_Property_Address__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Created_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Placement__c.Hotel_Placement</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Hotel Placements This Week</label>
    </listViews>
    <listViews>
        <fullName>My_Placements</fullName>
        <columns>NAME</columns>
        <columns>Properties_Lookup__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Opportunity__c</columns>
        <columns>Approved_Through_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Placements</label>
    </listViews>
    <listViews>
        <fullName>New_This_Week</fullName>
        <columns>NAME</columns>
        <columns>Actual_Move_In_Date__c</columns>
        <columns>Move_Out_Date__c</columns>
        <columns>Approved_Through_Date__c</columns>
        <columns>Monthly_Billing__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Created_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>cancelled_placements</fullName>
        <columns>NAME</columns>
        <columns>Opportunity_Adjuster__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Placement__c.Housing_Placement</value>
        </filters>
        <label>cancelled placements</label>
    </listViews>
    <nameField>
        <label>Placement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Placements</pluralLabel>
    <recordTypes>
        <fullName>Hotel_Placement</fullName>
        <active>true</active>
        <description>Place PH into Hotel</description>
        <label>Hotel Placement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Housing_Placement</fullName>
        <active>true</active>
        <description>Place PH into Housing</description>
        <label>Housing Placement</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ATD_greater_than_Move_In_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.DeveloperName = &apos;Housing_Placement&apos;, AND(!ISPICKVAL(Status__c,&apos;Cancelled&apos;),!ISPICKVAL(Status__c,&apos;Closed&apos;)),Approved_Through_Date__c &lt;=  Move_In_Date__c)</errorConditionFormula>
        <errorDisplayField>Approved_Through_Date__c</errorDisplayField>
        <errorMessage>The Approved Through Date cannot be less than or equal to the Move In Date</errorMessage>
    </validationRules>
</CustomObject>